--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
 
         .navbar a {
-            color: "white";
+            color: #f9d71c;
             text-align: center;
             padding: 14px 20px;
             text-decoration: none;
