--- a/concen.html
+++ b/concen.html
@@ -161,17 +161,17 @@
 
     <div class="below-content content">
         <h1>Exercise</h1>
-        <p>Before You begin make sure to mediate for 1 or 2 minutes to relax your mind.Make sure no one disturbs You while this exercise.<br>
-        You can also try <a href="dot.html" target="_blank">this</a> just enter time in minutes or seconds and You are good to go.<br>
+        <p>Before You begin make sure to meditate for 1 or 2 minutes to relax your mind. Make sure no one disturbs You during this exercise.<br>
+        You can also try <a href="dot.html" target="_blank">this</a> enter time in minutes or seconds and You are good to go.<br>
     After You have done You can meditate to improve.<br><br>
     The other method is this....<br><br>
     1) Take a white blank paper.<br><br>
-    2) Make a black dot in the middle most of the paper.<br><br>
-    3) Adjust it infront of your chest.<br><br>
-    4) If you feel any kind of pressure in Your eyes <br>increase or decrease the vertical postion until You get comfortable.<br><br>
-    5) Try to reach 15 minutes but dont push yourself too hard<br>Listen to yourself also<br><br><strong>Tips: <br></strong><br>
-When You concentrate, slowly and slowly lose conciousness about<br> everything yourself,yourbody ,your environment <br> <br>
-When You concentrate just feel the dot <br>feel its taste feel its smell feel the feeing of touch on it ,Capture everything about it </p>
+    2) Make a black dot in the middle of most of the paper.<br><br>
+    3) Adjust it in front of your chest.<br><br>
+    4) If you feel any kind of pressure in Your eyes <br>increase or decrease the vertical position until You get comfortable.<br><br>
+    5) Try to reach 15 minutes but don't push yourself too hard<br>Listen to yourself also<br><br><strong>Tips: <br></strong><br>
+When You concentrate, slowly and slowly lose consciousness about<br> everything yourself,your body ,your environment <br><br> When You will lose Consciousness you will not be able to feel Your body and it will be like Your are numb<br>
+When You concentrate just feel the dot <br>feel its taste feel its smell feel the feeling of touch on it, Capture everything about it </p>
     </div>
 </body>
 </html>
