--- a/concen.html
+++ b/concen.html
@@ -170,7 +170,7 @@
     3) Adjust it in front of your chest.<br><br>
     4) If you feel any kind of pressure in Your eyes <br>increase or decrease the vertical position until You get comfortable.<br><br>
     5) Try to reach 15 minutes but don't push yourself too hard<br>Listen to yourself also<br><br><strong>Tips: <br></strong><br>
-When You concentrate, slowly and slowly lose consciousness about<br> everything yourself, your body,your environment <br><br> When You will lose Consciousness you will not be able to feel Your body and it will be like You are numb<br><br>
+When You concentrate, slowly and slowly lose consciousness about<br> everything yourself, your body, your environment <br><br> When You lose Consciousness you will not be able to feel Your body and it will be like You are numb.<br><br>
 When You concentrate just feel the dot <br>feel its taste feel its smell feel the feeling of touch on it, Capture everything about it </p>
     </div>
 </body>
