--- a/concen.html
+++ b/concen.html
@@ -50,9 +50,9 @@
     <div class="above-content content">
         <h1>Concentration Exercise</h1>
         <p>Before We begin the exercise let me remind You that Concentration can cause headache <br>
-            Strain and Pain in eyes.So stop the exercise when You feel any problem with it.<br>
+            Strain and Pain in eyes. So stop the exercise when You feel any problem with it.<br>
         The key is to concentrate as for much as You can without making yourself uncomfortable.<br><br>
-        <strong>Note: Repeate this exercise miminum two times and maximum three times a day</strong>
+        <strong>Note: Repeat this exercise a minimum of two times and a maximum of three times a day</strong>
     </p>
     </div>
 
@@ -169,8 +169,8 @@
     2) Make a black dot in the middle of most of the paper.<br><br>
     3) Adjust it in front of your chest.<br><br>
     4) If you feel any kind of pressure in Your eyes <br>increase or decrease the vertical position until You get comfortable.<br><br>
-    5) Try to reach 15 minutes but don't push yourself too hard<br>Listen to yourself also<br><br><strong>Tips: <br></strong><br>
-When You concentrate, slowly and slowly lose consciousness about<br> everything yourself, your body, your environment <br><br> When You lose Consciousness you will not be able to feel Your body and it will be like You are numb.<br><br>
+    5) Try to reach 15 minutes but don't push yourself too hard<br>Listen to yourself also.<br><br><strong>Tips: <br></strong><br>
+When You concentrate, slowly and slowly lose consciousness about<br> everything yourself, your body, your environment <br><br> When You lose Consciousness you will not be able to feel<br> Your body and it will be like You are numb.<br><br>
 When You concentrate just feel the dot <br>feel its taste feel its smell feel the feeling of touch on it, Capture everything about it </p>
     </div>
 </body>
