--- a/concen.html
+++ b/concen.html
@@ -161,7 +161,7 @@
 
     <div class="below-content content">
         <h1>Exercise</h1>
-        <p>Before You begin make sure to meditate for 1 or 2 minutes to relax your mind. Make sure no one disturbs You during this exercise.<br>
+        <p>Before You begin make sure to meditate for 1 or 2 minutes to relax your mind.<br> Make sure no one disturbs You during this exercise.<br><br>
         You can also try <a href="dot.html" target="_blank">this</a> enter time in minutes or seconds and You are good to go.<br>
     After You have done You can meditate to improve.<br><br>
     The other method is this....<br><br>
