--- a/concen.html
+++ b/concen.html
@@ -166,7 +166,7 @@
     After You have done You can meditate to improve.<br><br>
     The other method is this....<br><br>
     1) Take a white blank paper.<br><br>
-    2) Make a black dot in the middle of most of the paper.<br><br>
+    2) Make a black dot in the middle  most of the paper.<br><br>
     3) Adjust it in front of your chest.<br><br>
     4) If you feel any kind of pressure in Your eyes <br>increase or decrease the vertical position until You get comfortable.<br><br>
     5) Try to reach 15 minutes but don't push yourself too hard<br>Listen to yourself also.<br><br><strong>Tips: <br></strong><br>
