--- a/main.html
+++ b/main.html
@@ -102,7 +102,7 @@
 <div class="navbar">
     <div class="side"><a href="#geokinesis">Geokinesis</a></div>
     <a href="#telekinesis" class="center">Telekinesis</a>
-    <div class="side"><a href="medi.html">Chi</a><a href="concen.html">Concentration Exercise</a><a href="#do-and-dont">Do and Don't</a></div>
+    <div class="side"><a href="medi.html">Meditation</a><a href="concen.html">Concentration Exercise</a><a href="#do-and-dont">Do and Don't</a></div>
 </div>
 
 <div class="title">Spiritual-Tech</div>
