--- a/medi.html
+++ b/medi.html
@@ -83,36 +83,36 @@
     </div>
     <div class="text-content" data-no-particles>
         The Core of Every Psychic Ability that exists in the world is <br><br><strong>"Meditation"</strong><br><br>
-        In this article I will explain the methods and the daily life exercises for learning to do Meditation.<br><br>
-        First of all If You have a mindset that Meditation is used to stop the mind from thinking,Your mindset is wrong. <br>
-        The more focus and energy You put in stopping Your thoughts and shutting your mind the more thoughts will come. <br>
+        In this article, I will explain the methods and the daily life exercises for learning to do Meditation.<br><br>
+        First of all, If You have a mindset that Meditation is used to stop the mind from thinking, Your mindset is wrong. <br>
+        The more focus and energy You put into stopping Your thoughts and shutting your mind the more thoughts will come. <br>
         <br>
-        Instead of focusing on thoughts, focus on things that are in continous motion <br><br>
-        <strong>The below discussed steps can help you learn Meditation. </strong><br><br>
+        Instead of focusing on thoughts, focus on things that are in continuous motion <br><br>
+        <strong>The below-discussed steps can help you learn Meditation. </strong><br><br>
         <strong>[+]Environment </strong><br><br>
-        You see Meditation requires all your energy to be focused on one thing,that is the reason why Environment matters here. <br>
-        Try to find silent place like a garden or seashore. <br>
-        When You get good at silent places You can move to any place that You like but in start You have to with silent places <br><br>
+        You see Meditation requires all your energy to be focused on one thing, that is the reason why the Environment matters here. <br>
+        You can try to find a quiet place like a garden or seashore. <br>
+        When You get good at silent places You can move to any place that You like but at the start, You have to go to silent places <br><br>
         <strong>[+]Time</strong><br><br>
-        Meditation doesn't requires You to be Punctual of time, You can do it anytime when Your mind is stress free. <br><br>
+        Meditation doesn't require You to be Punctual of time, You can do it anytime when Your mind is stress-free. <br><br>
         <strong>[+]meditation Music </strong><br><br>  
-        No Dont try it, You have to do meditation without any relaxing music or anything,You will train better. <br><br>
+        No, don't try it, You have to do meditation without any relaxing music or anything, You will train better. <br><br>
         <strong>[+]method 1</strong><br><br>
-        When You begin to do meditation just focus the conciousness on your belly which is in continous motion <br>
-        look at its expansion and contraction with mind's eye <br><br>
+        When You begin to do meditation just focus the consciousness on your belly which is in continuous motion <br>
+        look at its expansion and contraction with a mind's eye <br><br>
         <strong>[+] method 2</strong><br><br>
-        In this method You have to walk and focus the awarness on your feets and legs this method is great for begginers who find it tough to <br>
+        In this method You have to walk and focus the awareness on your feet and legs this method is great for beginners who find it tough to <br>
         focus on breath or heartbeat <br><br>
         <strong>[+] method 3</strong><br><br>
-        This method is very simple just you have to do is lay down or sit down and just focus on your breath <br>
-        You can either count your breaths or just look at them its up to you <br>
+        This method is very simple just you have to do is lie down or sit down and just focus on your breath <br>
+        You can either count your breaths or just look at them it's up to you <br>
         You can also concentrate on the top of your nose <br><br>
         <strong>Tips:</strong><br><br>
-        Remember meditation cannot happen in just eye blink so You have to be patienced and keep trying again and again. <br><br>
-        Try to be in such Environment where no one can disturb you because in deep meditation disturbance can cause anger or even headache. <br>
-        No need to have a track of time , get rid of everything <br><br>
-        You need to lose conciousness slowly and slowly about everything like your body,your Environment, where you are sitting like about everything this step is very important. <br><br>
-        Lastly Remember thoughts will come and will  make you unstable ,Remember you are going to suffer in this journey the only thing  you need to do is accept that suffering and trust the process, no matter what just dont give up it is a slow process and giving up will not speed it up <br><br>
+        Remember meditation cannot happen in just an eye blink so You have to be patience and keep trying again and again. <br><br>
+        Try to be in such an environment where no one can disturb you because in deep meditation disturbance can cause anger or even headache. <br>
+        No need to keep track of time, get rid of everything <br><br>
+        You need to lose consciousness slowly and slowly about everything like your body, your Environment, where you are sitting, and about everything this step is very important. <br><br>
+        Lastly, Remember thoughts will come and will  make you unstable, Remember you are going to suffer in this journey the only thing  you need to do is accept that suffering and trust the process, no matter what just don't give up it is a slow process and giving up will not speed it up <br><br>
         Remember attain and maintain........  
 
        
